Email templates change for full capacity.

--- a/course/app/views/subscriber_mailer/registration_confirmation.html.haml
+++ b/course/app/views/subscriber_mailer/registration_confirmation.html.haml
@@ -3,57 +3,14 @@
   = @subscriber.lastname
   \,
   %br
-  děkujeme za Vaši registraci na workshop s Maggie Kline Práce s traumatem u dětí 28.-31.7. 2016 v Praze. Níže Vám posíláme informace k platbě a podmínky účasti.
+  děkujeme za Vaši registraci na workshop s Maggie Kline Práce s traumatem u dětí 28.-31.7. 2016 v Praze.
 
 %p
-  %strong CENA WORKSHOPU A PLATBY:
-
+  Kurz je již bohužel naplněn, zařazujeme Vás tedy do seznamu náhradníků, a kontaktujeme Vás po 30.4., což je termín pro zaplacení záloh a po tomto termínu budeme mít přehled o počtu míst, která se uvolnila.
 %p
-  = "Zvolili jste variantu: #{@subscriber.participation}"
-  //- a = @subscriber.participation
-  - case @subscriber.participation
-  - when "Intro"
-    =render partial: 'intro'
-  - when "Workshop"
-    =render partial: 'workshop'
-  - when "Intro + workshop"
-    =render partial: 'intro_workshop'
-
+  V PŘÍPADĚ ZÁJMU VÁM NABÍZÍME MOŽNOST ZŮČASTNIT SE JEDNODENNÍHO INTRA, KDE JSOU STÁLE VOLNÁ MÍSTA. POKUD SE CHCETE INTRA ZÚČASTNIT NAPIŠTE NÁM PROSÍM NA TENTO MAIL.
 %p
-  Celé kurzovné nebo příslušnou zálohu zašlete na účet č.:
-  %strong 2500029896/2010
-  nejpozději
-  %strong do 30.4.2016.
-  %br
-  Pokud jste se rozhodli pro platbu zálohy, doplatek kurzovného zašlete na účet č.:
-  %strong 2500029896/2010
-  nejpozději
-  %strong do 15.6. 2016.
-  %br
-  Jako
-  %strong variabilní symbol
-  obou plateb uveďte své
-  %strong telefoní číslo.
-
-%p
-  %strong PODMÍNKY:
-
-%ol
-  %li
-    %strong Absolvování Intra
-    %br
-    Pro účast na workshopu je povinné absolvování Intra nebo jiná předchozí zkušenost s metodou SE (Intro nebo výcvik).
-  %li
-    %strong Zrušení workshopu
-    %br
-    Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2016. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
-  %li
-    Úplné znění podmínek naleznete na adrese
-    = link_to "www.somaticexperiencing.cz/podminky", "http://www.somaticexperiencing.cz/podminky"
-
-
-%p
-  Podrobnější informace k harmonogramu obdržíte na Váš mail v pozvánce před konáním worksopu. Vaše dotazy ke kurzu i platbám směřujte taktéž na tento mail.
+  Vaše dotazy ke kurzu i platbám směřujte na email workshopmaggiekline@gmail.com.
 %p
   Na setkání s Vámi se těší tým organizátorek:
 %p
