--- a/course/app/views/subscriber_mailer/registration_confirmation.text.erb
+++ b/course/app/views/subscriber_mailer/registration_confirmation.text.erb
@@ -1,37 +1,16 @@
-đVážený pane/paní <%= @subscriber.lastname %>,
+Vážený pane/paní <%= @subscriber.lastname %>,
 
-děkujeme za Vaši registraci a posíláme Vám informace k platbě a podmínky účasti.
+děkujeme za Vaši registraci na workshop s Maggie Kline Práce s traumatem u dětí 28.-31.7. 2016 v Praze.
 
+Kurz je již bohužel naplněn, zařazujeme Vás tedy do seznamu náhradníků, a kontaktujeme Vás po 30.4., což je termín pro zaplacení záloh a po tomto termínu budeme mít přehled o počtu míst, která se uvolnila.
 
-CENA WORKSHOPU:
+V PŘÍPADĚ ZÁJMU VÁM NABÍZÍME MOŽNOST ZŮČASTNIT SE JEDNODENNÍHO INTRA, KDE JSOU STÁLE VOLNÁ MÍSTA. POKUD SE CHCETE INTRA ZÚČASTNIT NAPIŠTE NÁM PROSÍM NA TENTO MAIL.
 
-Zvolili jste variantu: <%= @subscriber.participation %>
-
-<% a = @subscriber.participation %>
-<% case a
-     when 'Intro' %>
-      | celková cena | záloha do 30.4. | doplatek do 15.6.
-Intro | 2 500 Kč     | 1 000 Kč        | 1 500 Kč
-<% when 'Workshop' %>
-         | celková cena | záloha do 30.4. | doplatek do 15.6.
-Workshop | 8 900 Kč     | 3 000 Kč        | 5 900 Kč
-<% when 'Intro + workshop' %>
-                 | celková cena  | záloha do 30.4. | doplatek do 15.6.
-Intro + workshop | 11 000 Kč     | 4 000 Kč        | 7 000 Kč
-<% end %>
-
-Celé kurzovné nebo příslušnou zálohu zašlete na účet č.: 123123123/123 nejpozději do 30.4.2016.
-Pokud jste se rozhodli pro platbu zálohy, doplatek kurzovného zašlete na účet č.: 123123123/123 nejpozději do 15.6. 2016.
-Jako variabilní symbol obou plateb uveďte své telefoní číslo.
+Vaše dotazy ke kurzu i platbám směřujte na email workshopmaggiekline@gmail.com.
 
 
-PODMÍNKY:
+Na setkání s Vámi se těší tým organizátorek:
 
-Absolvování Intra
- - Pro účast na workshopu je povinné absolvování Intra nebo jiná předchozí zkušenost s metodou SE (Intro nebo výcvik).
-
-Zrušení workshopu
- - Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2016. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
-
-Úplné znění podmínek
- - naleznete na adrese http://www.somaticexperiencing.cz/podminky
+Ing. Zlata Koštejnová: tel 777 626 514
+Mgr. Michaela Čápová: tel 739 019 623
+Mgr. Tereza Koryntová: tel 732 743 818
