--- a/course/app/views/welcome/index.html.haml
+++ b/course/app/views/welcome/index.html.haml
@@ -12,12 +12,14 @@
           FOR KIDS
           \/ SOMATICKÉ PROŽÍVÁNÍ U DĚTÍ
       %h2
-        28.-31.7. 2016
-        %br
-        Apolinářská 447/4a, Praha 2 (
-        = link_to 'mapa', 'http://mapy.cz/zakladni?source=firm&id=160509&q=apolin%C3%A1%C5%99sk%C3%A1+4a&l=1&x=14.425407&y=50.07056&z=15'
-        \)
-      = link_to 'registrace zde do 30.4.', new_subscriber_path, :class => 'btn btn-lg btn-success'
+        31.8 - 3.9. 2017
+      %h1
+        %span
+          GreenPoint, Dvouletky 529/42, Praha - Strašnice
+          (
+          = link_to 'mapa', 'https://mapy.cz/zakladni?x=14.5066621&y=50.0756986&z=14&source=firm&id=2545320&q=YMCA%20DAP%20o.s.', target: '_blank'
+          \)
+      = link_to 'registrace zde do 15.6.', new_subscriber_path, :class => 'btn btn-lg btn-success'
   #scroll-down
     %i.fa.fa-angle-double-down
 .container.home
