--- a/course/app/views/welcome/kontakt.html.haml
+++ b/course/app/views/welcome/kontakt.html.haml
@@ -4,7 +4,7 @@
       %h1 Organizátorky
     .col-sm-4
       %h4 Ing. Zlata Koštejnová
-      %p Terapeutka Kraniosakrální biodynamiky a praktikantka metody Somatic Experiencing ® 
+      %p Pedagožka, terapeutka Kraniosakrální biodynamiky, praktikantka metody Somatic Experiencing ® a asistentka ve výcviku SE v ČR
       %p
         %strong mobil:
         777 626 514
@@ -13,7 +13,7 @@
         = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
     .col-sm-4
       %h4  Mgr. Michaela Čápová
-      %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ®
+      %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ® a asistentka ve výcviku SE v ČR
       %p
         %strong mobil:
         739 019 623
@@ -22,10 +22,10 @@
         = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
     .col-sm-4
       %h4  Mgr. Tereza Koryntová
-      %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ®
+      %p Psycholožka, bodypsychoterapeutka, praktikantka metody Somatic Experiencing ® a asistentka ve výcviku SE v ČR
       %p
         %strong mobil:
-        732 743 818 
+        732 743 818
         %br
         %strong email:
         = mail_to 'workshopmaggiekline@gmail.com', 'workshopmaggiekline@gmail.com'
