--- a/course/app/views/welcome/program.html.haml
+++ b/course/app/views/welcome/program.html.haml
@@ -21,9 +21,9 @@
           %th Intro + workshop
 
         %tr
-          %td 28.7.2016
-          %td 29.7. - 31.7.2016
-          %td 28.7. - 31.7.2016
+          %td 31.8.2017
+          %td 1.9 - 3.9. 2017
+          %td 31.8 - 3.9. 2017
 
         %tr
           %td Chci pouze Intro
@@ -60,7 +60,7 @@
                   %strong Práce s traumatem u dětí,
                   kteří nemají žádný výcvik v této metodě. Absolvování tohoto úvodu je podmínkou pro účast na třídenním workshopu Práce s traumatem u dětí.
                 %li Seznámíte se s teorií, základními principy a metodami somatického prožívání dle Petera Levina.
-                %li Účast na celém programu (Intro+Workshop)lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
+                %li Účast na celém programu (Intro+Workshop) je vhodný jako úvod do SE pro zájemce o tříletý výcvik v Somatickém prožívání.
                 = link_to 'www.somatic-experiencing.cz', 'http://somatic-experiencing.cz/'
             .col-sm-6
               %h3
@@ -89,7 +89,7 @@
                   je určen pro ty, kteří absolvovali Intro - Úvod do základů metody Somatického prožívání nebo již mají výcvik v této metodě.
                 %li
                   %strong
-                    Obsah letošního workshopu bude s větším důrazem na léčbu traumat způsobených  násilím, zneužíváním nebo jinou stresovou situací (rozvodem, ztrátou rodiče či hospitalizací).
+                    Obsah letošního workshopu bude s větším důrazem na téma léčby traumat způsobených stresovou situací lékařského zákroku nebo hospitalizací dítěte a téma přípravy na lékařský zákrok. Dále se budeme věnovat práci s dětmi z náhradní rodinné péče, které byly týrány nebo zneužívány v raném věku. Ukážeme si jak lze pracovat se studem, vinou a hranicemi u dítěte a jak je možné pracovat s celou rodinou dítěte.
                   %ul
                     %li seznámení se s vývojovými stádii dítěte z hlediska Somatického prožívání
                     %li náprava raných traumat a attachmentu pro podporu seberegulace skrze sociální kontakt
@@ -102,13 +102,13 @@
                 %li workshop je určen pro psychology, pedagogy, terapeuty, rodiče a všechny kdo pracují s dětmi a také pro ty, kdo chtějí prohloubit své porozumění při práci s vnitřním dítětem u dospělých
                 %li Zajištěn překlad z AJ do ČJ
                 %li Tento workshop splňuje podmínky postgraduálního workshopu pro praktikanty a asistenty SE.
-                %li Účast na celém programu (Intro+workshop) lze využít také jako Úvodní seminář pro zájemce o tříletý výcvik v Somatickém prožívání.
+                %li Účast na celém programu (Intro+workshop) je vhodným úvodem do metody SE ro zájemce o tříletý výcvik v Somatickém prožívání.
             .col-sm-6
               %p
                 %strong Maggie Kline
                 bude na svém třídenní workshopu
                 %strong Práce s traumatem u dětí
-                učit jak pomoci dětem znovu navrátit k rovnováze jejich autonomní nervový systém na biologické úrovni přežití poté, co zažily pocit přehlcení traumatickou nebo stresující událostí. V letošním roce se zaměří podrobněji na léčbu šoku a traumatu dítěte způsobeného násilím, zneužíváním nebo jinou stresovou situací (rozvodem, ztrátou rodiče či hospitalizací). Využití herních technik a tvoření v kombinaci s metodou Somatického prožívání umožní uvolnit napětí a dokončit zadržené obranné reakce, aby mohlo dojít ke znovytvoření rovnováhy a obnovení orientace a obranných impulzů. Tím se zvýší kapacita pro rozvinutí zdravého attachementu a zdravé sociální vazby dítěte. Při terapii SE a hře je tak dětem umožněno, aby mohly uvolnit své napětí v atmosféře bezpečí a skrze přítomnost klidného dospělého obnovit důvěru v sebe a okolní svět.
+                učit jak pomoci dětem znovu navrátit k rovnováze jejich autonomní nervový systém na biologické úrovni přežití poté, co zažily pocit přehlcení traumatickou nebo stresující událostí. Využití herních technik a tvoření v kombinaci s metodou Somatického prožívání umožní uvolnit napětí a dokončit zadržené obranné reakce, aby mohlo dojít ke znovytvoření rovnováhy a obnovení orientace a obranných impulzů. Tím se zvýší kapacita pro rozvinutí zdravého attachementu a zdravé sociální vazby dítěte. Při terapii SE a hře je tak dětem umožněno, aby mohly uvolnit své napětí v atmosféře bezpečí a skrze přítomnost klidného dospělého obnovit důvěru v sebe a okolní svět.
           #maggie.tab-pane{:role => "tabpanel"}
             .col-sm-12
               %h3
