--- a/course/app/views/welcome/podminky.html.haml
+++ b/course/app/views/welcome/podminky.html.haml
@@ -10,14 +10,15 @@
           %p
             %strong Registrace
           %p
-            Pro účast na workshopu nebo jeho jednotlivých částech je nutné se zaregistrovat. Registraci provedete online na adrese registrace. Registraci je nutné provést do 30.4.2016
+            Pro účast na workshopu nebo jeho jednotlivých částech je nutné se zaregistrovat. Registraci provedete online na adrese registrace. Registraci je nutné provést do 15.6.2017
         %li
           %p
             %strong Cena a záloha
-          %p Cena za jednodenní "Intro" činí 2 500 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 1 000 Kč je třeba provést nejpozději do 30.4.2016.
-          %p Cena za třídenní workshop "Práce s traumatem u dětí" činí 8 900 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 3 000 Kč je třeba provést nejpozději do 30.4.2016.
-          %p Cena za celou akci (Intro+workshop) činí 11 000 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 4 000 Kč je třeba provést nejpozději do 30.4.2016. Doplatek do 15.6.
-          %p Zálohy jsou po 30.4.2016 nevratné, a to i při zrušení účasti.
+          %p Cena za jednodenní "Intro" činí 2 500 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 1 000 Kč je třeba provést nejpozději do 15.6.2017.
+          %p Cena za třídenní workshop "Práce s traumatem u dětí" činí 8 900 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 3 000 Kč je třeba provést nejpozději do 15.6.2017.
+          %p Cena za celou akci (Intro+workshop) činí 11 000 Kč. Registraci a zaplacení kurzovného nebo minimálně zálohy 4 000 Kč je třeba provést nejpozději do 15.6.2017.
+          %p Zálohy jsou po 15.6.2017 nevratné, a to i při zrušení účasti.
+          %p Doplatky je nutné uhradit do 15.7.2017.
           %table.table-striped.table-bordered.table
             %tr
               %th
@@ -26,19 +27,19 @@
               %th Intro + workshop
 
             %tr
-              %td celková cena do 30.4.
+              %td celková cena do 15.6.
               %td 2 500 Kč
               %td 8 900 Kč
               %td 11 000 Kč
 
             %tr
-              %td minimální záloha do 30.4.
+              %td minimální záloha do 15.6.
               %td 1 000 Kč
               %td 3 000 Kč
               %td 4 000 Kč
 
             %tr
-              %td doplatek do 15.6.
+              %td doplatek do 15.7.
               %td 1 500 Kč
               %td 5 900 Kč
               %td 7 000 Kč
@@ -53,5 +54,9 @@
           %p Pro účast na workshopu je povinné absolvování Intra nebo jiná předchozí zkušenost s metodou SE (Intro nebo výcvik).
         %li
           %p
+            %strong Storno podmínky
+          %p Při zrušení účasti po 15.6. 2017 účastníkovi propadá výše zálohy příslušného kurzovného, při zrušení účasti po 9.8.2017 propadá polovina celé částky kurzovného a při zrušení účasti po 27.3. 2017 je celé kurzovné nevratné.
+        %li
+          %p
             %strong Zrušení workshopu
-          %p Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 10.5.2016. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
+          %p Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 30.6.2017. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
