Confiration email updated.

--- a/course/app/views/subscriber_mailer/registration_confirmation.html.haml
+++ b/course/app/views/subscriber_mailer/registration_confirmation.html.haml
@@ -47,6 +47,7 @@
     %strong Storno podmínky
     %br
     Při zrušení účasti po 15.6. 2017 účastníkovi propadá výše zálohy příslušného kurzovného, při zrušení účasti po 9.8.2017 propadá polovina celé částky příslušného kurzovného a při zrušení účasti po 23.8. 2017 je celé kurzovné nevratné.
+  %li
     %strong Zrušení workshopu
     %br
     Při nedostatečném počtu účastníků si organizátoři vyhrazují právo na zrušení workshopu. Rozhodné datum je stanoveno na 30.6.2017. Pokud by došlo ke zrušení workshopu ze strany organizátorů, vybrané zálohy budou účastníkům vráceny.
@@ -61,8 +62,10 @@
   Na setkání s Vámi se těší tým organizátorek:
 %p
   %strong Ing. Zlata Koštejnová:
-  tel 777 626 514,
+  tel 777 626 514
+  %br
   %strong Mgr. Michaela Čápová:
   tel 739 019 623
-  %strong a Mgr. Tereza Koryntová:
+  %br
+  %strong Mgr. Tereza Koryntová:
   tel 732 743 818
